# claudetest

./: .gitignore  CLAUDE.md  README.md  check_status.bat  file_monitor.py  main.py  monitor_manager.py  pyproject.toml  start_monitor.bat  stock_analyzer.py  stop_monitor.bat
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  documentation-organizer.md
.claude/commands/: nyanta_special.md
.claude/hooks/: ruff_fix.py
