[project]
name = "claudetest"
version = "0.1.0"
description = "A Streamlit-based stock analysis application with interactive charts and Yahoo Finance integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "streamlit>=1.47.1",
    "yfinance>=0.2.65",
]
